--- a/pages/rollcall/add.wxml
+++ b/pages/rollcall/add.wxml
@@ -18,5 +18,5 @@
 </view>
 
 <view class="weui-btn-area">
-    <button class="weui-btn" type="primary" bindtap="showTopTips">确定</button>
+    <button class="weui-btn" type="primary" hover-class="button-hover" bindtap="showTopTips">确定</button>
 </view>
