--- a/pages/rollcall/add.wxml
+++ b/pages/rollcall/add.wxml
@@ -6,7 +6,7 @@
 
             <view class="weui-cell__bd">{{item.name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-radio" wx:if="{{item.checked}}">
-                <icon class="weui-icon-radio" type="success_no_circle" size="16"></icon>
+                <icon class="weui-icon-radio" type="success_no_circle" size="16" color="#00bbbd"></icon>
             </view>
         </label>
     </radio-group>
