--- a/pages/mine/changename.wxml
+++ b/pages/mine/changename.wxml
@@ -2,7 +2,7 @@
 <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
         <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="姓名" />
+            <input class="weui-input" placeholder="姓名" focus="true"/>
         </view>
     </view>
 </view>
