--- a/pages/mine/class.wxml
+++ b/pages/mine/class.wxml
@@ -3,18 +3,16 @@
     <view class="weui-panel__bd">
         <view class="weui-media-box weui-media-box_small-appmsg">
             <view class="weui-cells weui-cells_in-small-appmsg">
-                <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+              <block wx:for="{{createdClasses}}">
+                <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                     <view class="weui-cell__bd weui-cell_primary">
-                        <view>物流管理基础一班</view>
+                        <view>{{item.name}}</view>
                     </view>
-                    <view class="weui-cell__ft btn-small">改名</view>
-                </navigator>
-                <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                    <view class="weui-cell__bd weui-cell_primary">
-                        <view>物流管理基础二班</view>
+                    <view class="weui-cell__ft">
+                      <navigator url='changeclassname?id={{item.id}}'><button plain="true" class="btn-small" type="primary">改名</button></navigator>
                     </view>
-                    <view class="weui-cell__ft btn-small">改名</view>
-                </navigator>
+                </view>
+              </block>
             </view>
         </view>
     </view>
@@ -25,16 +23,13 @@
     <view class="weui-panel__bd">
         <view class="weui-media-box weui-media-box_small-appmsg">
             <view class="weui-cells weui-cells_in-small-appmsg">
-                <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+              <block wx:for="{{joinedClasses}}">
+                <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                     <view class="weui-cell__bd weui-cell_primary">
-                        <view>物流管理基础一班</view>
+                        <view>{{item.name}}</view>
                     </view>
-                </navigator>
-                <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                    <view class="weui-cell__bd weui-cell_primary">
-                        <view>物流管理基础二班</view>
-                    </view>
-                </navigator>
+                </view>
+              </block>
             </view>
         </view>
     </view>
