--- a/pages/mine/changename.wxml
+++ b/pages/mine/changename.wxml
@@ -1,12 +1,14 @@
-<view class="weui-cells__title">为了更好地进行互动，请输入您的真实姓名</view>
-<view class="weui-cells weui-cells_after-title">
+<form bindsubmit="changeName">
+  <view class="weui-cells__title">为了更好地进行互动，请输入您的真实姓名</view>
+  <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="姓名" focus="true"/>
-        </view>
+      <view class="weui-cell__bd">
+        <input name="name" class="weui-input" placeholder="姓名" focus="true"/>
+      </view>
     </view>
-</view>
+  </view>
 
-<view class="weui-btn-area">
-    <button class="weui-btn" type="primary" hover-class="button-hover" bindtap="showTopTips">确定</button>
-</view>
+  <view class="weui-btn-area">
+    <button class="weui-btn" type="primary" hover-class="button-hover" formType="submit">确定</button>
+  </view>
+</form>
