--- a/pages/mine/class.wxss
+++ b/pages/mine/class.wxss
@@ -3,9 +3,9 @@ page {
 }
 
 .btn-small {
-  border:1px solid #00bbbd;
   font-size:12px;
-  padding:3px 5px;
-  border-radius:5px;
   color:#00bbbd;
+  padding-left: 14rpx;
+  padding-right: 14rpx;
+  line-height: 1.8;
 }
