--- a/pages/mine/profile.wxml
+++ b/pages/mine/profile.wxml
@@ -1,7 +1,7 @@
 <view class="userinfo">
   <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-  <view class="userinfo-nickname">
-    <text>{{userInfo.nickName}}</text>
+  <view class="userinfo-name">
+    <text>{{userInfo.name}}</text>
     <navigator url="changename"><image src="../../images/edit.png" style="width: 18px; height: 18px; margin: 0 0 -4px 10rpx"/></navigator>
   </view>
 </view>
