--- a/pages/mine/about.wxml
+++ b/pages/mine/about.wxml
@@ -1,28 +1,12 @@
 <view class="weui-article">
-    <view class="weui-article__h1">大标题</view>
-    <view class="weui-article__section">
-        <view class="weui-article__title">章标题</view>
-        <view class="weui-article__section">
-            <view class="weui-article__h3">1.1 节标题</view>
-            <view class="weui-article__p">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.
-            </view>
-        </view>
-        <view class="weui-article__section">
-            <view class="weui-article__h3">1.2 节标题</view>
-            <view class="weui-article__p">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </view>
-        </view>
-    </view>
+  <view class="weui-article__p">
+      微点名是一款基于微信小程序的免费点名应用，希望能够帮助老师们更轻松地完成点名工作。
+  </view>
+  <view class="weui-article__p">
+      本程序一直在完善，希望能够听到大家的反馈，不断改进。
+  </view>
 </view>
 
 <view class="weui-footer weui-footer_fixed-bottom">
-    <view class="weui-footer__text">Copyright © 2017 xkt</view>
+    <view class="weui-footer__text">Copyright © 2017 微点名</view>
 </view>
