--- a/pages/rollcall/detail.wxml
+++ b/pages/rollcall/detail.wxml
@@ -4,9 +4,9 @@
     <view class="weui-panel__hd">已到学生</view>
     <view class="weui-panel__bd">
       <view class="students">
-        <block wx:for="{{call.people}}">
+        <block wx:for="{{people}}" wx:key="{{id}}">
           <view class="student" wx:if="{{item.status == 'attend'}}">
-            <image src="{{item.avatar}}"></image>
+            <image src="{{item.avatarUrl}}"></image>
             <view class="name">{{item.name}}</view>
           </view>
         </block>
@@ -18,9 +18,9 @@
     <view class="weui-panel__hd">未到学生</view>
     <view class="weui-panel__bd">
       <view class="students">
-        <block wx:for="{{call.people}}">
+        <block wx:for="{{people}}" wx:key="{{id}}">
           <view class="student" wx:if="{{item.status == 'absent'}}">
-            <image src="{{item.avatar}}"></image>
+            <image src="{{item.avatarUrl}}"></image>
             <view class="name">{{item.name}}</view>
           </view>
         </block>
