--- a/pages/rollcall/detail.wxml
+++ b/pages/rollcall/detail.wxml
@@ -29,5 +29,5 @@
 </view>
 
 <view class="weui-btn-area">
-  <button class="weui-btn" type="warn" hover-class="button-hover">删除点名</button>
+  <button class="weui-btn" type="warn" hover-class="button-hover" bindtap="deleteCall">删除点名</button>
 </view>
