--- a/pages/rollcall/owner_ongoing.wxml
+++ b/pages/rollcall/owner_ongoing.wxml
@@ -1,4 +1,10 @@
 <view class="barcode">
+  <text class="call-name">
+    {{callName}}
+  </text>
+  <text class="class-name">
+    {{className}}
+  </text>
   <text class="description">
     将该小程序页面分享给学生，或者让大家扫描下面的二维码，即可让学生加入该班级点名。
   </text>
