--- a/pages/rollcall/student_ongoing.wxml
+++ b/pages/rollcall/student_ongoing.wxml
@@ -6,7 +6,7 @@
     {{className}}
   </text>
   <text class="description">
-    点名还未开始，你可以将该小程序页面分享给大家，或者让大家扫描下面的二维码，让同班学生加入班级点名。
+    点名还未开始，你可以点击右上角的菜单将该小程序页面分享给大家，或者让大家扫描下面的二维码，让同班学生加入班级点名。
   </text>
   <image src="{{barcodeUrl}}"/>
 </view>
