--- a/pages/mine/profile.wxml
+++ b/pages/mine/profile.wxml
@@ -18,7 +18,7 @@
                 </navigator>
                 <navigator url="about" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                     <view class="weui-cell__bd weui-cell_primary">
-                        <view>关于微点名</view>
+                        <view>关于小点名</view>
                     </view>
                     <view class="weui-cell__ft weui-cell__ft_in-access"></view>
                 </navigator>
