--- a/pages/rollcall/owner_ongoing.wxml
+++ b/pages/rollcall/owner_ongoing.wxml
@@ -6,7 +6,7 @@
     {{className}}
   </text>
   <text class="description">
-    将该小程序页面分享给学生，或者让大家扫描下面的二维码，即可让学生加入该班级点名。
+    点击右上角的菜单可以将该小程序页面分享给学生，或者让大家扫描下面的二维码，即可让学生加入该班级点名。
   </text>
   <image src="{{barcodeUrl}}"/>
 </view>
