--- a/pages/start/setname.wxml
+++ b/pages/start/setname.wxml
@@ -10,7 +10,7 @@
   <view class="weui-cells weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
       <view class="weui-cell__bd">
-        <input name="name" class="weui-input" placeholder="姓名" focus="true"/>
+        <input name="name" value="{{userInfo.nickName}}" class="weui-input" placeholder="姓名" focus="true"/>
       </view>
     </view>
   </view>
